Fix overflow and footer animation

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -133,6 +133,10 @@
   text-decoration: underline;
 }
 
+.hide-overflow {
+  overflow-x: hidden;
+}
+
 /* !SECTION UTILITY CLASSES */
 
 
